#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mrg13], [1.0-B71225], [https://github.com/catwise/mrg13/issues])
AM_INIT_AUTOMAKE([mrg13], [1.0-B71225])

# Checks for programs.
AC_PROG_F77

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
